Fixed alignment of cards.

--- a/src/app/carpool-list/carpool-list.component.css
+++ b/src/app/carpool-list/carpool-list.component.css
@@ -1,3 +1,7 @@
+.card-group {
+    margin: auto
+}
+
 .list-group-item {
     background-color: rgba(0, 0, 255, 0.350);
 }
